--- a/.github/workflows/ci__test_build_push.yml
+++ b/.github/workflows/ci__test_build_push.yml
@@ -54,7 +54,7 @@ jobs:
         uses: peaceiris/actions-gh-pages@v4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: docs/site
+          publish_dir: ${{ github.workspace }}/docs/site
 
   docker:
     runs-on: ubuntu-latest
