--- a/.github/workflows/ci__test_build_push.yml
+++ b/.github/workflows/ci__test_build_push.yml
@@ -12,50 +12,86 @@ env:
   IMAGE_NAME: ${{ github.repository }}
 
 jobs:
+
+  # -------------------------------------------------------
+  # TEST JOB
+  # -------------------------------------------------------
   test:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+
       - name: Run tests
         run: pytest -q
 
-  docs:
+
+  # -------------------------------------------------------
+  # DOCS BUILD JOB
+  # -------------------------------------------------------
+  docs-build:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-      - name: Build docs
+
+      - name: Build MkDocs site
         run: |
-          cd docs && mkdocs build
-      - name: Upload docs artifact
+          cd docs
+          mkdocs build
+
+      - name: Upload built site
         uses: actions/upload-artifact@v4
         with:
           name: site
           path: docs/site
+
+
+  # -------------------------------------------------------
+  # DOCS DEPLOY JOB (GitHub Pages)
+  # -------------------------------------------------------
+  docs-deploy:
+    runs-on: ubuntu-latest
+    needs: docs-build
+    if: github.event_name == 'push'
+
+    steps:
+      - name: Download site artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: site
+          path: site
+
       - name: Deploy to GitHub Pages
-        if: github.event_name == 'push'
         uses: peaceiris/actions-gh-pages@v4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ${{ github.workspace }}/docs/site
+          publish_dir: site
 
+
+  # -------------------------------------------------------
+  # DOCKER BUILD JOB
+  # -------------------------------------------------------
   docker:
     runs-on: ubuntu-latest
     needs: [test]
@@ -63,15 +99,18 @@ jobs:
     permissions:
       contents: read
       packages: write
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+
       - name: Log in to GitHub Container Registry
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Extract metadata
         id: meta
         uses: docker/metadata-action@v5
@@ -81,6 +120,7 @@ jobs:
             type=ref,event=branch
             type=sha,prefix={{branch}}-
             type=raw,value=latest,enable={{is_default_branch}}
+
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
