--- a/.github/workflows/ci__test_build_push.yml
+++ b/.github/workflows/ci__test_build_push.yml
@@ -64,7 +64,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: site
-          path: docs/site/*
+          path: docs/site
 
 
   # -------------------------------------------------------
@@ -80,13 +80,13 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: site
-          path: site
+          path: docs_site
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ${{ github.workspace }}/site
+          publish_dir: ${{ github.workspace }}/docs_site
 
 
   # -------------------------------------------------------
