Fixed doc-build in github action

--- a/.github/workflows/ci__test_build_push.yml
+++ b/.github/workflows/ci__test_build_push.yml
@@ -86,7 +86,7 @@ jobs:
         uses: peaceiris/actions-gh-pages@v4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ${{ github.workspace }}/docs_site
+          publish_dir: ${{ github.workspace }}/docs_site/site
 
 
   # -------------------------------------------------------
