--- a/.github/workflows/ci__test_build_push.yml
+++ b/.github/workflows/ci__test_build_push.yml
@@ -64,7 +64,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: site
-          path: docs/site
+          path: docs/site/
 
 
   # -------------------------------------------------------
