--- a/.github/workflows/ci__test_build_push.yml
+++ b/.github/workflows/ci__test_build_push.yml
@@ -1,5 +1,3 @@
-name: Test, build and push
-
 on:
   push:
     branches: [ main, master ]
@@ -19,56 +17,49 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Set up Python
-        uses: actions/setup-python@v5
+      - uses: actions/setup-python@v5
         with:
           python-version: "3.11"
 
-      - name: Install dependencies
-        run: |
+      - run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: Run tests
-        run: pytest -q
+      - run: pytest -q
 
 
   # -------------------------------------------------------
-  # DOCS BUILD JOB
+  # BUILD DOCS (MkDocs → public/)
   # -------------------------------------------------------
   docs-build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Set up Python
-        uses: actions/setup-python@v5
+      - uses: actions/setup-python@v5
         with:
           python-version: "3.11"
 
-      - name: Install dependencies
-        run: |
+      - run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install mkdocs mkdocs-material mkdocstrings mkdocstrings-python pymdown-extensions mkdocs-bootstrap4
 
-      - name: Build MkDocs site
+      - name: Build MkDocs site into public/
         run: |
-          cd docs
-          mkdocs build
+          mkdocs build --config-file docs/mkdocs.yml --site-dir public
 
-      - name: Upload built site
+      - name: Upload public/ as artifact
         uses: actions/upload-artifact@v4
         with:
-          name: site
-          path: docs/site/
+          name: public
+          path: public/
+          if-no-files-found: error
 
 
   # -------------------------------------------------------
-  # DOCS DEPLOY JOB (GitHub Pages)
+  # DEPLOY TO GITHUB PAGES (publish public/)
   # -------------------------------------------------------
   docs-deploy:
     runs-on: ubuntu-latest
@@ -76,17 +67,17 @@ jobs:
     if: github.event_name == 'push'
 
     steps:
-      - name: Download site artifact
+      - name: Download public artifact
         uses: actions/download-artifact@v4
         with:
-          name: site
-          path: docs_site
+          name: public
+          path: public
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ${{ github.workspace }}/docs_site/site
+          publish_dir: ${{ github.workspace }}/public
 
 
   # -------------------------------------------------------
@@ -101,18 +92,15 @@ jobs:
       packages: write
 
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Log in to GitHub Container Registry
-        uses: docker/login-action@v3
+      - uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Extract metadata
-        id: meta
+      - id: meta
         uses: docker/metadata-action@v5
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
@@ -121,8 +109,7 @@ jobs:
             type=sha,prefix={{branch}}-
             type=raw,value=latest,enable={{is_default_branch}}
 
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v5
+      - uses: docker/build-push-action@v5
         with:
           context: .
           file: ./docker/Dockerfile
