Fixed missing imports

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -11,6 +11,8 @@ COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
 COPY doip_server ./doip_server
+COPY doip_shared ./doip_shared
+COPY doip_client ./doip_client
 
 # Optionally generate a self-signed cert for local use; override GENERATE_SELF_SIGNED to skip.
 RUN if [ "$GENERATE_SELF_SIGNED" = "true" ]; then \
