--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -15,3 +15,4 @@ nav:
   - Configuration: configuration.md
   - Development: development.md
   - Project Layout: project_structure.md
+  - Workflows: workflows.md
