--- a/.github/workflows/build-doip-cli-binary.yml
+++ b/.github/workflows/build-doip-cli-binary.yml
@@ -23,11 +23,8 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
-      ############################
-      # Install dependencies
-      ############################
-
-      - name: Install Python deps (Linux/Mac)
+      # Linux + macOS dependencies
+      - name: Install deps (Linux/Mac)
         if: matrix.os != 'windows-latest'
         shell: bash
         run: |
@@ -37,20 +34,18 @@ jobs:
           pip install pyinstaller
           pip install -r requirements.txt
 
-      - name: Install Python deps (Windows)
+      # Windows dependencies
+      - name: Install deps (Windows)
         if: matrix.os == 'windows-latest'
         shell: cmd
         run: |
           python -m venv venv
-          venv\Scripts\activate
+          call venv\Scripts\activate
           pip install --upgrade pip wheel setuptools
           pip install pyinstaller
           pip install -r requirements.txt
 
-      ############################
-      # Run tests
-      ############################
-
+      # Tests
       - name: Run tests (Linux/Mac)
         if: matrix.os != 'windows-latest'
         shell: bash
@@ -62,13 +57,10 @@ jobs:
         if: matrix.os == 'windows-latest'
         shell: cmd
         run: |
-          venv\Scripts\activate
+          call venv\Scripts\activate
           pytest -vv
 
-      ############################
-      # Build Executable
-      ############################
-
+      # Build binaries
       - name: Build CLI (Linux/Mac)
         if: matrix.os != 'windows-latest'
         shell: bash
@@ -88,7 +80,7 @@ jobs:
         if: matrix.os == 'windows-latest'
         shell: cmd
         run: |
-          venv\Scripts\activate
+          call venv\Scripts\activate
           pyinstaller --onefile client_cli\main.py ^
             --name mardi-doip-cli ^
             --console ^
@@ -99,10 +91,7 @@ jobs:
             --log-level=WARN
           certutil -hashfile dist\mardi-doip-cli.exe SHA256 > dist\checksum.txt
 
-      ############################
-      # Upload Executable
-      ############################
-
+      # Upload results
       - name: Upload CLI Artifact
         uses: actions/upload-artifact@v4
         with:
