--- a/.github/workflows/build-doip-cli-binary.yml
+++ b/.github/workflows/build-doip-cli-binary.yml
@@ -11,7 +11,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [windows-latest, ubuntu-latest, macos-latest]
+        os: [windows-latest, ubuntu-20.04, macos-latest]
         python-version: ["3.12"]
 
     runs-on: ${{ matrix.os }}
